finished basic layout

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Vue Template</title>
     <script src="https://unpkg.com/vue/dist/vue.min.js"></script>
+    <link rel="stylesheet" href="./styles.css"></link>
     <!-- <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script> -->
     <script>
         document.addEventListener('DOMContentLoaded', () => {
@@ -16,6 +17,11 @@
             })
         })
     </script>
+    <style>
+        * {
+            font-family: cursive;
+        }
+    </style>
 </head>
 
 <body>
